<?xml version="1.0"?>
<package format="2">
  <name>mycobot_bringup</name>
  <version>0.0.0</version>
  <description>
    The mycobot_bringup package
  </description>

  <maintainer email="tissueloose@gmail.com">Hirotaka Yamada</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>mycobot_description</exec_depend>
  <exec_depend>mycobot_gazebo</exec_depend>
  <exec_depend>mycobot_moveit_config</exec_depend>
  <exec_depend>mycobot_real_robot</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>