<?xml version="1.0"?>
<package format="2">
  <name>mycobot_control</name>
  <version>0.0.0</version>
  <description>
    The mycobot_control package
  </description>

  <maintainer email="tissueloose@gmail.com">Hirotaka Yamada</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>

</package>