<?xml version="1.0"?>
<package format="2">
  <name>mycobot_gazebo</name>
  <version>0.0.0</version>
  <description>
    The mycobot_gazebo package
  </description>

  <maintainer email="tissueloose@gmail.com">Hirotaka Yamada</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>mycobot_control</exec_depend>
  <exec_depend>mycobot_description</exec_depend>

  <exec_depend>xacro</exec_depend>

</package>
