<?xml version="1.0"?>
<package format="2">
  <name>mycobot_real_robot</name>
  <version>0.0.0</version>
  <description>
    The mycobot_real_robot package
  </description>

  <maintainer email="tissueloose@gmail.com">Hirotaka Yamada</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
